--- a/src/index.css
+++ b/src/index.css
@@ -19,4 +19,8 @@ body,* {
   color: var(--text-primary);
   width: 100vw;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
 }
+
