--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
-body,* {
+/*
+  Resets
+*/
+* {
   box-sizing: border-box;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,6 +10,14 @@ body,* {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+html,body{
+  width: 100vw !important;
+  overflow-x: hidden;
+}
+/*
+  Utility classes
+*/
 :root{
   --bg-primary: #0D0D1B;
   
@@ -15,25 +26,6 @@ body,* {
 }
 .text-secondary{
   color: var(--text-secondary);
-}
-
-.background{
-  background-color: var(--bg-primary);
-  color: var(--text-primary);
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  padding: 2rem;
-}
-
-.hero{
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
 }
 
 .text-lg{
@@ -55,7 +47,9 @@ body,* {
   transition: all 0.3s ease-in-out;
   text-transform: uppercase;
 }
-
+.btn:hover{
+  transform: scale(1.25);
+}
 
 .btn-primary{
   border: 1px solid var(--text-primary);
@@ -68,6 +62,9 @@ body,* {
 }
 
 
+/*
+  Other classes
+*/
 .btn-section{
   display: flex;
   flex-direction: column;
@@ -79,4 +76,23 @@ body,* {
 }
 .btn-section > .btn{
   width: 100%;
+}
+
+.background{
+  background-color: var(--bg-primary);
+  color: var(--text-primary);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+}
+
+.hero{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
