--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,7 +12,7 @@ nav ul a{
     font-weight: bold;
     padding: 0.5rem 2rem;
     border-radius: 5px;
-    transition: all 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
     position: relative;
 }
 nav ul a::before{
@@ -21,7 +21,7 @@ nav ul a::before{
     width: 0;
     height: 4px;
     background-color: var(--text-secondary);
-    transition: all 0.3s ease-in-out;
+    /* transition: all 0.3s ease-in-out; */
     position: absolute;
     bottom: -5px;
 }
@@ -44,7 +44,11 @@ nav ul a:hover::before{
     }
 }
 @media screen and (max-width: 600px){
+    .navbar{
+        visibility: hidden;
+    }
     .navbar.active{
+        visibility: visible;
         display:flex;
         flex-direction: column;
         position: fixed;
@@ -53,24 +57,30 @@ nav ul a:hover::before{
         
         top: 0;
         left: 0;
-        transition: all 0.3s ease-in-out;
+        transition: transform 0.3s ease-in-out;
     
         justify-content: center;
         align-items: center;
+    }
+    .navbar.active a{
+        transition: visibility 0.4s ease-in-out;
     }
     .navbar::before{
         content: '';
         position: absolute;
         background-color: rgba(0, 0, 0, 0.8);
         filter: blur(1.5rem);
-        width: 300vw;
-        height: 300vh;
+        width: 100vw;
+        height: 100vh;
         transition: all 0.3s ease-in-out;
-        transform: scale(0);
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%) scale(0) ;
     }
     .navbar.active::before{
         content: '';
-        transform: scale(1);
+        transform: translate(-50%,-50%) scale(1);
+        transition: transform 1s ease-in-out;
     }
     .navbar li a{
         display: block;
@@ -83,5 +93,10 @@ nav ul a:hover::before{
         content: '';
         left: 50%;
         transform: translateX(-50%);
+    }
+    nav.active .hamburger svg{
+        position: fixed;
+        z-index: 100;
+        right: 10px;
     }
 }
