--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -14,6 +14,7 @@ nav ul a{
     border-radius: 5px;
     transition: color 0.3s ease-in-out;
     position: relative;
+    text-transform: uppercase;
 }
 nav ul a::before{
     content: '';
