--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 
 html,body{
   width: 100vw !important;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 /*
   Utility classes
@@ -70,7 +70,7 @@ html,body{
   background-color: var(--bg-primary);
   color: var(--text-primary);
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   padding: 2rem;
